# atoms_editor

./: .gitignore  CITATION.cff  CMakeLists.txt  INSTALL.md  README.md  imgui.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cmake/: InstallPortableDependencies.cmake.in
data/: Fe2O3.cif
imgui/: imgui_draw.cpp
src/: ElementData.cpp  ElementData.h  Makefile  Makefile_old  UndoRedo.h  imgui.ini  main copy.cpp  main.cpp
src/algorithms/: AngularDistributionAnalysis.cpp  AngularDistributionAnalysis.h  BulkCrystalBuilder.cpp  BulkCrystalBuilder.h  CSLComputation.cpp  CSLComputation.h  CellSculptorAlgo.cpp  CellSculptorAlgo.h  InterfaceBuilder.cpp  InterfaceBuilder.h  NanoCrystalBuilder.cpp  NanoCrystalBuilder.h  PolyCrystalBuilder.cpp  PolyCrystalBuilder.h  ShortRangeOrderAnalysis.cpp  ShortRangeOrderAnalysis.h  StackingFaultBuilder.cpp  VoronoiComputation.cpp  VoronoiComputation.h
src/app/: AtomForge.manifest  AtomForge.rc  EditorApplication.cpp  EditorApplication.h  EditorOps.cpp  EditorOps.h  EditorState.h  FileDropHandler.cpp  FileDropHandler.h  ImageExport.cpp  ImageExport.h  InteractionHandlers.cpp  InteractionHandlers.h  SceneView.cpp  SceneView.h  StructureFileService.cpp  StructureFileService.h  WindowSetup.cpp  WindowSetup.h
src/camera/: Camera.cpp  Camera.h
src/cli/: CLIMode.cpp  CLIMode.h
src/graphics/: CellSculptorShaders.cpp  CellSculptorShaders.h  CylinderMesh.cpp  CylinderMesh.h  LowPolyMesh.cpp  Picking.cpp  Picking.h  Renderer.cpp  Renderer.h  SceneBuffers.cpp  SceneBuffers.h  Shader.cpp  Shader.h  ShadowMap.cpp  SphereMesh.cpp  SphereMesh.h  StructureInstanceBuilder.cpp  StructureInstanceBuilder.h
src/io/: StructureLoader.cpp  StructureLoader.h
src/math/: MathUtils.cpp  MathUtils.h
src/ui/: AngularDistributionAnalysis.cpp  AngularDistributionAnalysis.h  AtomContextMenu.cpp  AtomContextMenu.h  BulkCrystalBuilderDialog.cpp  BulkCrystalBuilderDialog.h  CSLGrainBoundaryDialog.cpp  CSLGrainBoundaryDialog.h  CellSculptorDialog.cpp  CellSculptorDialog.h  CommonNeighbourAnalysis.cpp  CommonNeighbourAnalysis.h  Controls.cpp  Controls.h  CustomStructureDialog.cpp  CustomStructureDialog.h  EditMenuDialogs.cpp  EditMenuDialogs.h  FileBrowser.cpp  FileBrowser.h  ImGuiSetup.cpp  ImGuiSetup.h  InterfaceBuilderDialog.cpp  InterfaceBuilderDialog.h  LatticePlaneOverlay.cpp  LatticePlaneOverlay.h  MeasurementOverlay.cpp  MeasurementOverlay.h  MergeStructuresDialog.cpp  MergeStructuresDialog.h  NanoCrystalBuilderDialog.cpp  NanoCrystalBuilderDialog.h  PeriodicTableDialog.cpp  PeriodicTableDialog.h  PolyCrystalBuilderDialog.cpp  PolyCrystalBuilderDialog.h  PolyhedralOverlay.cpp  PolyhedralOverlay.h  RadialDistributionAnalysis.cpp  RadialDistributionAnalysis.h  (+8 more)
src/util/: PathUtils.cpp  PathUtils.h
